--- a/index.html
+++ b/index.html
@@ -2,50 +2,51 @@
 <html>
 
 <head>
-    <title>2048</title>
-    <meta name="viewport" content="width=device-width, initial-scale=0.5">
-    <link rel="stylesheet" href="stylesheet.css">
+	<title>2048</title>
+	<meta name="viewport" content="width=device-width, initial-scale=0.5">
+	<link href="style.css" rel="stylesheet">
+	<script src="script.js" defer>
+
+	</script>
 </head>
 
 <body>
-    <h1>2048</h1>
+	<h1>2048</h1>
 
-    <div id="board">
-        <div class="row">
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-        </div>
-        <div class="row">
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-        </div>
-        <div class="row">
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-        </div>
-        <div class="row">
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-        </div>
-    </div>
+	<div id="grid">
+		<div class="row">
+			<div class="square"></div>
+			<div class="square"></div>
+			<div class="square"></div>
+			<div class="square"></div>
+		</div>
+		<div class="row">
+			<div class="square"></div>
+			<div class="square"></div>
+			<div class="square"></div>
+			<div class="square"></div>
+		</div>
+		<div class="row">
+			<div class="square"></div>
+			<div class="square"></div>
+			<div class="square"></div>
+			<div class="square"></div>
+		</div>
+		<div class="row">
+			<div class="square"></div>
+			<div class="square"></div>
+			<div class="square"></div>
+			<div class="square"></div>
+		</div>
+	</div>
 
-    <div id="sidePanel">
-        <p id="instructions">
-            Use the arrow keys to slide the numbers. The goal is to combine matching numbers to get a 2048 tile.
-        </p>
+	<div id="sidePanel">
+		<p id="instructions">
+			Use the arrow keys to slide the numbers. The goal is to combine matching numbers to get a 2048 tile.
+		</p>
 
-        <p id="message"></p>
-    </div>
-
-    <script src="script.js"></script>
+		<p id="messageParagraph"></p>
+	</div>
 </body>
 
 </html>
